crates/factorio-codegen/tests/snapshots/module_generation__module_with_private_helper_and_exported_handler.snap
---
source: crates/factorio-codegen/tests/module_generation.rs
expression: normalized
---
-- Generated by factorio-rs@VERSION
-- Module: `bound_detector`
local boundDetector = {}
local helper

function helper()
	return 1
end
function boundDetector.on_init(event)
	local count = 0
end
return boundDetector
