crates/factorio-codegen/tests/snapshots/module_generation__omits_unreachable_private_helper_when_pruned.snap
---
source: crates/factorio-codegen/tests/module_generation.rs
expression: normalized
---
-- Generated by factorio-rs@VERSION
-- Module: `bound_detector`
local boundDetector = {}
function boundDetector.on_init(event)
	local count = 0
end
return boundDetector
